[Tab Model] Create TabModelInternal
Create TabModelInternal & IncognitoTabModelInternal to package private
some methods that should remain internal. To simplify testing these
interfaces (and by extension methods) are visible for testing purposes.

Right now this just moves `setActive()`. In a follow-up CL I plan to
also move `destroy()`.

See bug for details of future plans to use this to hide some existing
methods as they get moved to a new helper interface.

Fixed: 40726458
Change-Id: I31a084d6431f49dc1cff1bb41ac78d8e6e5e7c2c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5907436
Reviewed-by: Sky Malice <skym@chromium.org>
Commit-Queue: Calder Kitagawa <ckitagawa@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1364455}