@@ -66,7 +66,6 @@ import org.chromium.components.feature_engagement.Tracker;
 import org.chromium.ui.base.TestActivity;
 import org.chromium.ui.modaldialog.ModalDialogManager;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -140,7 +139,7 @@ public class TabSwitcherPaneCoordinatorFactoryUnitTest {
 
         when(mTabModelSelector.getTabModelFilterProvider()).thenReturn(mTabModelFilterProvider);
         when(mTabModelSelector.getModel(false)).thenReturn(mTabModel);
-        when(mTabModelSelector.getModels()).thenReturn(Arrays.asList(mTabModel));
+        when(mTabModelSelector.getModels()).thenReturn(List.of(mTabModel));
         when(mTabModelFilter.getTabModel()).thenReturn(mTabModel);
         when(mTabModelFilterProvider.getTabModelFilter(false)).thenReturn(mTabModelFilter);
         mTabModelFilterSupplier.set(mTabModelFilter);
